# jaxa_config

./: .setup_assistant  CMakeLists.txt  package.xml
config/: cameras.yaml  config.yaml  initial_positions.yaml  ivr.ros2_control.xacro  ivr.srdf  ivr.urdf.xacro  jaxa.urdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ros2_individual_controllers.yaml
config/moveit/: bioik_kinematics.yaml  ivr_servo.yaml  ompl_planning.yaml  trac_ik_kinematics_distance.yaml  trac_ik_kinematics_speed.yaml
doc/: 04_custom_behaviors.md
launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
objectives/: interpolate_to_joint_state.xml  motion_test.xml  move_one_arm.xml  move_to_joint_state.xml  move_to_named_pose.xml  move_to_pose.xml  move_two_arms.xml  new_objective.xml  request_teleoperation.xml  swim.xml  teleoperate.xml  teleoperate_joint_jog.xml  wiggle.xml
waypoints/: waypoints.yaml  waypoints.yaml.bak
